--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -6,7 +6,8 @@
     justify-content: space-between;
     align-items: center;
   }
-  
+
+
   .header-content .logo {
     color: white;
     text-decoration: none;
@@ -31,8 +32,10 @@
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
-    background-color: transparent;
-    color: white;
+    /* color: white; */
     cursor: pointer;
-}
-  
+  }
+
+  .header-btn{
+    color: transparent;
+  }  
