--- a/src/styles/RegisterPage.css
+++ b/src/styles/RegisterPage.css
@@ -25,6 +25,8 @@ input[type="password"] {
   border-radius: 4px;
 }
 
+
+
 button {
   padding: 10px 20px;
   border: none;
@@ -34,6 +36,9 @@ button {
   cursor: pointer;
 }
 
-button:hover {
-  background-color: #0056b3;
+.header-btn{
+  color: transparent;
+  background-color: transparent;
+
 }
+
