--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -4,7 +4,7 @@
     padding: 10px 20px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: center;    
   }
 
 
@@ -32,10 +32,18 @@
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
-    /* color: white; */
+    color: white;
     cursor: pointer;
   }
 
   .header-btn{
     color: transparent;
-  }  
+    font-size: 16px;
+    background-color: transparent;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  }
+  
