--- a/src/styles/ProductListPage.css
+++ b/src/styles/ProductListPage.css
@@ -9,12 +9,11 @@
     justify-content: center;
   }
   
-  /* ProductCard.css */
   .product-card {
     border: 1px solid #ddd;
     border-radius: 8px;
     padding: 16px;
-    width: 300px; /* or any other fixed width */
+    width: 300px;
     text-align: center;
   }
   
