--- a/src/styles/AdminPage.css
+++ b/src/styles/AdminPage.css
@@ -3,9 +3,26 @@
     border-radius: 4px;
     background-color: #f2f2f2;
 }
+
+.manage-btn{
+    display: block;
+    margin: 5px 0;
+    width: 200px;
+    align-items: center;
+}
+
+.manage-buttons{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .title-div{
     max-width: 300px;
     margin: 50px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
 }
 
