--- a/src/styles/RegisterPage.css
+++ b/src/styles/RegisterPage.css
@@ -73,3 +73,36 @@ button {
   border-radius: 5px;
   text-align: center;
 }
+
+.error-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+}
+
+.modal-backdrop {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  width: 200px;
+  background-color: #fff;
+  color: red;
+  padding: 20px;
+  border-radius: 5px;
+  z-index: 11;
+  border: solid;
+  border-color: red;
+}
