--- a/src/styles/RegisterPage.css
+++ b/src/styles/RegisterPage.css
@@ -99,10 +99,10 @@ button {
 .modal-content {
   width: 200px;
   background-color: #fff;
-  color: red;
+  /* color: red; */
   padding: 20px;
   border-radius: 5px;
   z-index: 11;
   border: solid;
-  border-color: red;
+  /* border-color: red; */
 }
