--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,7 +1,10 @@
 .site-header {
     background-color: #333;
     color: white;
-    padding: 10px 20px;
+    padding-top: 0px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;    
