--- a/src/styles/CustomerAccountPage.css
+++ b/src/styles/CustomerAccountPage.css
@@ -4,3 +4,32 @@ margin: 50px auto;
 padding: 20px;
 border-radius: 4px;
 }
+
+.main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 300px;
+    margin: 50px auto;
+    padding: 20px;
+    border-radius: 4px;
+}
+
+.first-log{
+    margin: 10px;
+}
+
+.btn-primary {
+    background-color: #007bff;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .btn-primary:hover {
+    background-color: #0056b3;
+  }
+  
