--- a/src/styles/CartPage.css
+++ b/src/styles/CartPage.css
@@ -41,3 +41,14 @@
     background-color: #45a049;
   }
   
+  .checkout-popup {
+    position: fixed;
+    top: 17%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: white;
+    padding: 40px;
+    border: 1px solid #6fdf47;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    z-index: 100;
+  }
