--- a/src/styles/ProductCard.css
+++ b/src/styles/ProductCard.css
@@ -19,7 +19,7 @@
   
   .product-info {
     padding: 15px;
-    text-align: left;
+    /* text-align: left; */
   }
   
   .product-info h3 {
@@ -55,5 +55,17 @@
     background-color: #0056b3;
     color: white;
     text-decoration: none;
+  }
+
+  .add-to-cart{
+    background-color: #007bff;
+    color: white;
+    padding: 8px 16px;
+    text-decoration: none;
+    border-radius: 4px;
+    display: inline-block;
+    margin-top: 12px;
+    font-size: 0.9em;
+    margin: 5px;
   }
   
